[package]
name = "boat_plan"
version = "0.1.0"
authors = ["douglasmg7 <douglasmg7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"
# png = "0.16.7"
gtk = "0.9.2"
gio = "0.9.1"
cairo-rs = { version = "0.9.1", features = ["pdf"] }
